@@ -2,7 +2,7 @@ Arg1: a
 Arg2: b 
 Arg3: c
 Total Args: 10 and now...
-Test: [a, b, c, d, e, f, g, h, i, j]
+Test: @('a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j')
 Argument: a
 Argument: b
 Argument: c
@@ -17,7 +17,7 @@ Arg1: 1
 Arg2: 2 
 Arg3: 3
 Total Args: 5 and now...
-Test: [1, 2, 3, 4, 5]
+Test: @(1, 2, 3, 4, 5)
 Argument: 1
 Argument: 2
 Argument: 3
@@ -27,7 +27,7 @@ Arg1:
 Arg2:  
 Arg3: 
 Total Args: 0 and now...
-Test: []
+Test: @()
 Arg1: 1 
 Arg2: 2 
 Arg3: 3
