@@ -8,8 +8,8 @@ This is a test of 9
 This is a test of 10
 This is a test of blah
 Aftermath: blah
-Pre print: [blah, bleh, sluts]
-Array [blarg, bleh, sluts] and blarg
-Array [blarg, blarg, sluts] and blarg
-Array [blarg, blarg, blarg] and blarg
-Test: [blarg, blarg, blarg]
+Pre print: @('blah', 'bleh', 'sluts')
+Array @('blarg', 'bleh', 'sluts') and blarg
+Array @('blarg', 'blarg', 'sluts') and blarg
+Array @('blarg', 'blarg', 'blarg') and blarg
+Test: @('blarg', 'blarg', 'blarg')
